--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   <body>
     <header>
       <div class="welcome-bar" style="background-color: #000000">
-        <h1>Bem-vindo Felipe</h1>
+        <h1 style="display: inline-block;">Bem-vindo Felipe</h1>
+        <h5 style="display: inline-block; margin-left: 10px;">V1.0 InriPai(melhor chou da live)</h5>
       </div>
     </header>
     <div id="charactersTable" class="characters-table">
