--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body>
+    <div class="watermark">Versão 1.1 - Inri_Pai (te amo big)</div>
     <div id="charactersTable" class="characters-table">
       <button id="loadDefaultsButton" onclick="loadDefaultCharacters()">
         Carregar Padrões
